fix updating command